syntax = "proto3";

package map;

option java_multiple_files = true;
option java_package = "lib.map";
option java_outer_classname = "MapGrpcGdx";

import "google/protobuf/empty.proto";

service Map {
  rpc SyncMapState (stream MapStateRequest) returns (stream MapStateResponse) {}
}

message MapStateRequest {
  string id = 1;
  int32 length = 2;
  int32 seed = 3;
  bool started = 4;
}

message MapStateResponse {
  int32 length = 1;
  int32 seed = 2;
  Position position = 3;
  bool started = 4;
  bool isHost = 5;
}

message Position {
  float positionX = 1;
  float positionY = 2;
}

